--- a/ManageGo/Views/BuildingsListPage.xaml
+++ b/ManageGo/Views/BuildingsListPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+             xmlns:controls="clr-namespace:ManageGo.Controls"
              x:Name="ThisPage"
              xmlns:local="clr-namespace:ManageGo"
              x:Class="ManageGo.BuildingsListPage">
@@ -35,7 +36,10 @@
                 <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
             </StackLayout>
             <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
-                <ListView ItemsSource="{Binding Buildings}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" CachingStrategy="RecycleElement">
+                <controls:NestedListView ItemsSource="{Binding Buildings}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18">
+                    <x:Arguments>
+                        <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                    </x:Arguments>
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
@@ -76,7 +80,7 @@
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                </ListView>
+                </controls:NestedListView>
             </StackLayout>
              <Frame IsVisible="{Binding IsSearching}" 
                     Grid.Row="2" HasShadow="false" 
