--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -77,7 +77,7 @@
                                 <ColumnDefinition Width="auto" />
                             </Grid.ColumnDefinitions>
                             <Button Grid.Column="0" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Reset" Command="{Binding OnResetFiltersButtonTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand" />
-                            <Button Grid.Column="1" FontSize="Small" TextColor="White" Text="Apply filters" CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="CenterAndExpand" Padding="18,0,18,0" />
+                            <Button Grid.Column="1" FontSize="Medium" TextColor="White" Text="Apply filters" CornerRadius="21" Command="{Binding OnApplyFiltersTapped}" BackgroundColor="{StaticResource Primary}" HorizontalOptions="FillAndExpand" Padding="18,0,18,0" />
                             <Button Grid.Column="2" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" Text="Cancel" Command="{Binding OnCloseFliterViewTapped}" BackgroundColor="Transparent" HorizontalOptions="EndAndExpand"/>
                         </Grid>
                         <BoxView HeightRequest="1" VerticalOptions="Center" BackgroundColor="{StaticResource Grey-Light-2}" Grid.ColumnSpan="2" />
@@ -92,8 +92,7 @@
                           IsRefreshing="{Binding IsRefreshingList}"
                           RefreshCommand="{Binding OnPulledToRefresh}"
                           SeparatorVisibility="None" Margin="22,18,22,18" 
-                                         ItemAppearing="Handle_ItemAppearing"
-                          >
+                          ItemAppearing="Handle_ItemAppearing">
                     <x:Arguments>
                         <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
                     </x:Arguments>
@@ -102,7 +101,10 @@
                             <ViewCell>
                                 <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="14,6,14,6">
                                     <StackLayout Orientation="Horizontal" Margin="0,8,0,8" Spacing="22">
-                                        <Label Text="&#11044;" TextColor="{Binding StatusColor}" FontSize="Medium" HorizontalOptions="Center" Margin="8,0,0,0" VerticalTextAlignment="Start" VerticalOptions="FillAndExpand"/>
+                                        <StackLayout HorizontalOptions="Center" Margin="8,0,0,0" VerticalOptions="FillAndExpand">
+                                            <Label Text="&#11044;" TextColor="{Binding StatusColor}" FontSize="Medium" HorizontalOptions="Center"  VerticalTextAlignment="Start" />
+                                            <Image Source="chat_grey.png"  HorizontalOptions="Center" IsVisible="{Binding PaymentNote,Converter={StaticResource StringToBoolConverter}}"/>
+                                        </StackLayout>
                                         <StackLayout HorizontalOptions="FillAndExpand">
                                             <StackLayout Orientation="Horizontal">
                                                 <Label Text="{Binding TotalAmountAndFees, StringFormat={StaticResource FormatDecimalToCurrency}}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Mid-1}"  VerticalOptions="CenterAndExpand" />
