--- a/ManageGo/Views/MGWebViewPage.xaml
+++ b/ManageGo/Views/MGWebViewPage.xaml
@@ -11,7 +11,7 @@
     </ContentPage.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Padding="12" BackgroundColor="#231f20">
