--- a/ManageGo/Views/TicketFilterSelectView.xaml
+++ b/ManageGo/Views/TicketFilterSelectView.xaml
@@ -5,6 +5,9 @@
              xmlns:controls="clr-namespace:ManageGo.Controls"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="ManageGo.TicketFilterSelectView">
+     <ContentPage.Resources>
+        <local:FilterFieldStringToColor x:Key="FilterFieldStringToColor" />
+    </ContentPage.Resources>
     <ScrollView>
         <StackLayout Spacing="0">
             <StackLayout Padding="21,17,21,17" Spacing="0">
@@ -20,7 +23,7 @@
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Building" TextColor="{Binding FilterBuildingTextColor}" FontSize="Small" />
+                    <Label Grid.Column="0" Text="Building" TextColor="{Binding SelectedBuildingsString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
                         <Label Text="{Binding SelectedBuildingsString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small"/>
                         <controls:NestedListView IsVisible="{Binding FilterBuildingsExpanded}" ItemsSource="{Binding Buildings}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
@@ -48,13 +51,14 @@
                     </Grid.GestureRecognizers>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <!-- Priority Filter Row -->
                 <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Priority" TextColor="{Binding FilterPriorityTextColor}" FontSize="Small" >
+                    <Label Grid.Column="0" Text="Priority" TextColor="{Binding SelectedPriorityString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" >
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Priority" />
                         </Label.GestureRecognizers>
@@ -98,7 +102,7 @@
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Category" TextColor="{Binding FilterCategoryTextColor}" FontSize="Small" />
+                    <Label Grid.Column="0" Text="Category" TextColor="{Binding SelectedCategoriesString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
                         <Label Text="{Binding SelectedCategoriesString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
                             <Image.GestureRecognizers>
@@ -131,13 +135,14 @@
                 </Grid>
                 
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <!-- Filter Tags Row -->
                 <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Tags" TextColor="{Binding FilterTagsTextColor}" FontSize="Small" />
+                    <Label Grid.Column="0" Text="Tags" TextColor="{Binding SelectedTagsString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
                      <StackLayout Grid.Column="1">
                         <Label Text="{Binding SelectedTagsString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
                             <Label.GestureRecognizers>
@@ -168,15 +173,15 @@
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnExpandFilterTapped}" CommandParameter="Tags" />
                     </Grid.GestureRecognizers>
                 </Grid>
-                
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <!-- Filter Ticket Status Row -->
                 <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Status" TextColor="{Binding FilterStatusTextColor}" FontSize="Small" />
+                    <Label Grid.Column="0" Text="Status" TextColor="{Binding SelectedStatusFlagsString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
                         <Label Text="{Binding SelectedStatusFlagsString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small">
                             <Label.GestureRecognizers>
@@ -207,6 +212,7 @@
                 </Grid>
                 
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <!-- Due Date -->
                 <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -217,7 +223,7 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Label Grid.Column="0" Grid.Row="0" Text="Due date" TextColor="{Binding FilterDueDateColor}" FontSize="Small" />
+                    <Label Grid.Column="0" Grid.Row="0" Text="Due date" TextColor="{Binding FilterDueDateString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
                     <Grid IsVisible="{Binding FilterDueDateExpanded}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -237,13 +243,14 @@
                 </Grid>
                 
                 <BoxView HeightRequest="1" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
+                <!-- Assigned -->
                 <Grid Padding="0,17">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Text="Assigned" TextColor="Gray" FontSize="Small" />
+                    <Label Grid.Column="0" Text="Assigned" TextColor="{Binding SelectedUsersString,Converter={StaticResource FilterFieldStringToColor}}" FontSize="Small" />
                     <StackLayout Grid.Column="1">
                         <Label Text="{Binding SelectedUsersString}" LineBreakMode="TailTruncation" TextColor="Gray" FontSize="Small"/>
                         <controls:NestedListView IsVisible="{Binding FilterUsersExpanded}" ItemsSource="{Binding Users}" Margin="0,8,0,0" HasUnevenRows="true" SeparatorVisibility="None"  HeightRequest="150" SelectionMode="None">
