--- a/ManageGo/Views/VideoPlayerPage.xaml
+++ b/ManageGo/Views/VideoPlayerPage.xaml
@@ -8,7 +8,7 @@
     
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
             <Grid Grid.Row="0" Padding="12" BackgroundColor="#231f20">
