* AndroidManifest.xml: pushed to app store
* Info.plist:
* ManageGo.csproj:
* LoginPage.xaml:
* iTunesArtwork@2x:
* DataAccess.cs:
* Entitlements.plist:
* ManageGo.iOS.csproj:
* SettingsPage.xaml:
* SettingsPage.xaml.cs:
* LoginPageModel.cs:
* Resource.designer.cs:
* Icon20.png:
* Icon29.png:
* Icon120.png:
* Contents.json:
* AppIcon60x60@2x.png:
* AppIcon40x40@3x.png:

--- a/ManageGo/Views/SettingsPage.xaml
+++ b/ManageGo/Views/SettingsPage.xaml
@@ -29,9 +29,9 @@
       
     <Grid RowSpacing="22">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
-             <ColumnDefinition Width="auto" />
+             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Label Grid.Column="0" VerticalOptions="Center" Grid.Row="0" Text="Name" TextColor="{StaticResource Grey-Light-1}" FontSize="Medium"/>
         <Label Grid.Column="0" VerticalOptions="Center" Grid.Row="1" Text="Email" TextColor="{StaticResource Grey-Light-1}" FontSize="Medium"/>
@@ -78,12 +78,12 @@
         <!--
                     <Switch Grid.Column="1" VerticalOptions="Center"  IsToggled="{Binding ApplicationsNotificationsIsOn}" Grid.Row="7" HorizontalOptions="EndAndExpand"/>
         -->
-        <Image Source="pencil_grey.png" Grid.Column="2" Grid.Row="0">
+        <Image Source="pencil_grey.png" ClassId="UserName" Grid.Column="2" Grid.Row="0">
             <Image.GestureRecognizers>
                 <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding OnEditButtonTapped}" CommandParameter="UserName" />
             </Image.GestureRecognizers>
         </Image>
-        <Image Source="pencil_grey.png" Grid.Column="2" Grid.Row="1" >
+        <Image Source="pencil_grey.png" ClassId="Email" Grid.Column="2" Grid.Row="1" >
             <Image.GestureRecognizers>
                 <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding OnEditButtonTapped}" CommandParameter="Email" />
             </Image.GestureRecognizers>
