* GoogleCloudMessagingHelper.cs: updates trello #1
* App.xaml.cs:
* Payment.cs:
* LoginPage.xaml:
* PaymentsPage.xaml:
* BankTransaction.cs:
* TransactionsPage.xaml:
* BaseDetailPage.cs:
* NotificationsPage.xaml:
* Welcomepagemodel.cs:
* PaymentsPageModel.cs:
* BuildingsListPage.xaml.cs:
* NotificationsPage.xaml.cs:
* MasterMenuPageModel.cs:
* NotificationsPageModel.cs:
* TicketDetailsPageModel.cs:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -36,7 +36,7 @@
                     HorizontalOptions="Start"
                     WidthRequest="42"
                     Rotation="180"
-                    IsVisible="{Binding BackbuttonIsVisible}"
+                    IsVisible="{Binding IsModal}"
                     VerticalOptions="CenterAndExpand"
                     Image="arrow_right.png" />
                 <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
