--- a/ManageGo/Views/LoginPage.xaml
+++ b/ManageGo/Views/LoginPage.xaml
@@ -22,7 +22,7 @@
                 <local:CustomEntry Placeholder="Enter your email" Text="{Binding UserEmail}" />
                 <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
                 <Label Text="Password:" Margin="0,35,0,0" TextColor="{x:StaticResource Grey-Mid-1}" FontSize="Small" HorizontalOptions="CenterAndExpand"/>
-                <local:CustomEntry Placeholder="Password" Text="{Binding UserPassword}" />
+                <local:CustomEntry Placeholder="Password" Text="{Binding UserPassword}" IsPassword="true" />
                 <BoxView HeightRequest="1" Margin="0,-4,0,0" BackgroundColor="{StaticResource Grey-Light-2}" />
                 <StackLayout IsVisible="{Binding IsBiometricsLabelVisible}" Orientation="Horizontal" Padding="17,22,17,22" HorizontalOptions="CenterAndExpand">
                     <Image Source="{Binding AuthCheckBoxIcon}" VerticalOptions="CenterAndExpand"/>
