--- a/ManageGo/Views/NotificationsPage.xaml
+++ b/ManageGo/Views/NotificationsPage.xaml
@@ -26,6 +26,13 @@
                         IsVisible="{Binding HamburgerIsVisible}"
                         VerticalOptions="CenterAndExpand"
                         Image="nav_menu_icon.png" />
+                 <Button BackgroundColor="Transparent"
+                    Command="{Binding OnBackbuttonTapped}"
+                    IsVisible="{Binding IsModal}"
+                    HorizontalOptions="Start"
+                    WidthRequest="24"
+                    VerticalOptions="CenterAndExpand"
+                    Image="nav_back_icon.png" />
                 <Image Source="logo.png" Margin="-50,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
             <StackLayout Spacing="0" Grid.Row="1" BackgroundColor="White">
@@ -73,7 +80,7 @@
                                         
                                     </StackLayout>
                                     <Frame.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.ShowDetails,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
+                                        <TapGestureRecognizer Tapped="Handle_Tapped" NumberOfTapsRequired="1" Command="{Binding BindingContext.ShowDetails,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
                                     </Frame.GestureRecognizers>
                                 </Frame>
                             </ViewCell>
